/*
 * $Id: ChangeLog,v 1.2359 2004/02/21 21:14:10 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-22 16:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/hbxml.c
    ! Fixed memory leaks.
    % Optimized out hb_itemNew()

2004-02-22 04:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    % More optimization out usage of hb_itemNew()
    ! fix unreleased memory block on unsupported yet DBRECORDINFO()

2004-02-22 03:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    % Optimized out usage of hb_itemNew()

  * source/rtl/direct.c
    ! return value was not initialized before filespec is found and this causes
      GPF when filespec is not found. Fixed.

2004-02-21 09:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/regex.c
    ! Fixed few memory leaks.
    % Optimized out hb_itemNew()

  * tests/tstregex.prg
    * Minor improvement to display.

2004-02-21 21:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    % Optimized out usage of hb_itemNew()

  * source/rtl/trim.c
    % Optimized by :
      * bypassing HB_IS_COMPLEX checking because parameter passed is always
        string type.
      * trim functions now completely using their own static function and
        directly utilizing members of PHB_ITEM. They should be faster now.

  * contrib/unicode/hbcc.prg
  * contrib/unicode/hbcu.c
  * contrib/unicode/hbcx.c
  * contrib/unicode/hbcy.c
    % Optimized out usage of hb_itemNew()

2004-02-21 09:00 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  * utils/hbmake/hbmake.prg
    ! set target name to make file name

2004-02-21 10:02 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/vm/errorapi.c
    * some "spaces" around

  * source/vm/hbi18n.c
    ! fixed memory leaks.

  * source/vm/hvm.c